feat(properties): add AI assistant integration and property listing flow
- Add AI assistant menu item and navigation
- Implement property creation suggestion in AI chat
- Add new translations for property listing and AI assistant
- Create custom choice chip widget for amenities and payment methods
- Update property form with new currency and price ranges
- Improve UI for location selection and confirmation

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -216,6 +216,7 @@
   "searchApartmentSuggestion": "Looking for apartment in...",
   "searchRoomieSuggestion": "Looking for roomie...",
   "createProfileSuggestion": "Create profile...",
+  "createPropertySuggestion": "List property",
   "aiAssistantGreeting": "Hello {name}! I am your assistant...",
   "@aiAssistantGreeting": {
     "placeholders": {
@@ -255,6 +256,7 @@
   },
   "noImagePlaceholder": "No image",
   "menuMatchs": "Matches",
+  "menuAiAssistant": "AI Assistant",
   "menuAddProperty": "Add Property",
   "tenantRole": "Tenant",
   "landlordRole": "Landlord",
